BactaTank-Classic/0.3.4/Credits.md
# Credits
BactaTank Classic could not have been made with these amazing people! I wish I could thank everyone that tested and discovered things but that is unfortunately not possible. Links to the relevant persons GitHub or other links are included where possible.

## Development Help
- [**Javster101**](https://github.com/javster101) - Creator of [BrickBench](https://github.com/BrickBench/BrickBench), which is a massive source of information for BactaTank Classic's development.
- [**IsaMorphic**](https://github.com/IsaMorphic) - Creator of various LEGO Game tools (usually relating to LEGO Star Wars The Videogame), and a massive source of information and help.
- [**Slucier**](https://rockraidersunited.com/profile/9708-sluicer/) - Creator of various LEGO Game model extraction tools, which are a massive source of information.
- [**Aaron**](https://github.com/aaronlink127) - Creator of the original [PLYtoLSWMesh tool and TCSConv](https://github.com/aaronlink127/LEGOTTGamesProjects), the former being the original way to convert meshes to be used inside of LEGO Games, and the latter which helped with the version 2 conversion.
- [**Skulluse**](https://gamebanana.com/members/2001203) - Creator of the original GHG Repack tool, in which BactaTank Classic was a successor to.
- [**BarioTheWeird**](https://gamebanana.com/members/1980048) - Help with various reverse engineering of the files.
- **Suso** - Help with various reverse engineering of the files.

## Logo Creation Help
- [**Cheatster9000x**](https://gamebanana.com/members/1609018)

## Software Title Suggestion
- [**SirYodaJedi**](https://github.com/SirYodaJedi)

## Testing Help
- [**Alex (Venomander)**](https://gamebanana.com/members/2190525)
- [**Austin**](https://gamebanana.com/members/2178719)
- [**Bagusman**](https://gamebanana.com/members/2723692)
- [**Cheatster9000x**](https://gamebanana.com/members/1609018)
- **Cosine_Rave**
- [**DevzGuy**](https://github.com/brickmodding)
- **GavinWK**
- [**Ingysta**](https://gamebanana.com/members/1728415)
- [**Jacko**](https://gamebanana.com/members/1962013)
- [**JTman620**](https://gamebanana.com/members/1489636)
- [**JustNathan**](https://gamebanana.com/members/1896802)
- [**NickV**](https://gamebanana.com/members/2493029)
- [**PollyThePancake**](https://github.com/PollyThePancake)
- [**Quba**](https://gamebanana.com/members/2521657)
- [**Shadow.Shifter**](https://gamebanana.com/members/1945343)
- [**somthinbuggin2**](https://www.youtube.com/@krisdreemurra.k.a.somthinb4356/videos)
- [**Savvy**](https://gamebanana.com/members/2060873)
- **Suso**
- [**Treefortress2**](https://gamebanana.com/members/2612688)
- **Tobias**
- [**thereallintman**](https://gamebanana.com/members/1772509)
- **Vader18**

## Documentation Help
- [**DevzGuy**](https://github.com/brickmodding) - Help writing sections of the docs
- [**Cheatster9000x**](https://gamebanana.com/members/1609018) - Proofreading
- [**PollyThePancake**](https://github.com/PollyThePancake) - Proofreading
- [**SirYodaJedi**](https://github.com/SirYodaJedi) - Proofreading and other help

## Vendors
- [**ImGui_GM (Nommin)**](https://github.com/nommiin/ImGui_GM) - Graphical user interfacing.
- [**Struct n' Array Parser (Juju Adams)**](https://github.com/JujuAdams/SNAP) - Config file saving and loading.
- [**DoLater (Juju Adams)**](https://github.com/JujuAdams/DoLater) - Alternative to `call_later` function.
- [**File Dropper (DragoniteSpam)**](https://dragonite.itch.io/dropper) - File drop detection.
- [**Catspeak (Katsaii)**](https://github.com/katsaii/catspeak-lang) - Currently unused scripting API.
- [**Window Commands (YellowAfterLife)**](https://yellowafterlife.itch.io/gamemaker-window-commands) - Window command hooking.